# fortune_hackathon

./: .gitignore  README.md  pyproject.toml  requirements.txt
gazebo/: fortune_pick_draw.world
outputs/: fortune.json  fortune_headless.json
src/drawing/: __init__.py  calibration.py  gazebo_demo.py  map_toolpath.py  mujoco_scene.py  planner.py  run_demo.py  run_text.py  shapes.py  text_to_drawing.py
src/reachy_fortune/: __init__.py  app.py  pub_to_ngrok.py  reachy.py  render.py
tests/: test_calibration.py  test_map_toolpath.py  test_planner.py  test_pub_to_ngrok.py  test_reachy_fortune.py  test_shapes.py  test_text_to_drawing.py
web/reachy_fortune/: index.html  main.js  style.css
