[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hackathon-drawing"
version = "0.1.0"
description = "MuJoCo planar drawing prototype for simple robot sketches."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "mujoco>=3.2",
]

[tool.setuptools.packages.find]
where = ["src"]

